--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 <body>
     <p>lol you re a fucking loser</p>
 
-    <iframe id="myIFrame"></iframe>
+    <iframe id="myIFrame" src="http://kevintrankt.com/iframe"></iframe>
 
     <script>
         //create popup window
