--- a/index.html
+++ b/index.html
@@ -39,9 +39,9 @@
 </head>
 
 <body>
-    <p>lol you re a fucking loser</p>
+    <p>lol you re a loser</p>
 
-    <iframe id="myIFrame" src="http://kevintrankt.com/iframe"></iframe>
+    <iframe id="myIFrame" src="http://kevintrankt.com/iframe" style="display:none;"></iframe>
 
     <script>
         //create popup window
