--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 </head>
 
 <body>
-    <p onclick="getIdentity()">lol you re a loser</p>
+    <p onclick="getIdentity()">lol you re a fucking loser dude you suck</p>
 
     <iframe id="myIFrame" src="http://kevintrankt.com/iframe" style="display:none;"></iframe>
 
